--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,12 @@
 :root {
-    --white: #ffffff;
-    --lightgray: #d3d3d3
+  --white: #ffffff;
+  --lightgray: #d3d3d3;
+  --gray: #808080;
 }
 
-html { font-size: 62.5%; }
-body { font-size: 1.4rem; }
+html {
+  font-size: 62.5%;
+}
+body {
+  font-size: 1.4rem;
+}
